--- a/src/main/webapp/paginas/Transaccion.xhtml
+++ b/src/main/webapp/paginas/Transaccion.xhtml
@@ -138,7 +138,7 @@
                             <h:outputText value="#{transaccionClasificacionFrm.registro.categoriaId.descripcion}"/>
 
 
-                            <p:column headerText="Naturaleza de la cuenta" />
+                            <p:column headerText="Naturaleza de la cuenta"/>
                             <h:panelGrid columns="2">
                                 <h:panelGrid>
                                     <h2>Cuenta Contable Debe</h2>
@@ -187,11 +187,43 @@
                                 <p:panel header="Transacción Seleccionada">
                                     <h:panelGrid columns="2" cellpadding="5">
 
+                                        <p:outputLabel for="txtId" value="ID:"/>
+                                        <p:inputText id="txtId" value="#{transaccionClasificacionFrm.registro.id}"
+                                                     readonly="true"
+                                                     disabled="true"/>
+
+                                        <p:outputLabel for="txtTipoTransaccion" value="Tipo Transaccion:"/>
+                                        <p:inputText id="txtTipoTransaccion"
+                                                     value="#{transaccionClasificacionFrm.registro.tipoTransaccion}"
+                                                     size="75"
+                                                     required="true"/>
+
+                                        <p:outputLabel for="acCategoria" value="Categoria :"/>
+                                        <h:panelGrid>
+                                            <h:panelGrid columns="2">
+                                                <p:outputLabel value="Seleccione la categoria: "
+                                                               for="acCategoria"/>
+
+                                            </h:panelGrid>
+
+                                        </h:panelGrid>
+
+                                        <p:outputLabel for="acNombre" value="Nombre de Cuenta :"/>
+                                        <h:panelGrid>
+                                            <h:panelGrid columns="2">
+                                                <p:outputLabel value="Seleccione la cuenta: "
+                                                               for="acNombre"/>
+
+                                            </h:panelGrid>
+
+                                        </h:panelGrid>
+
                                     </h:panelGrid>
 
-
-
                                 </p:panel>
+
+
+                                <ues:botones-crud formulario=""/>
 
                             </h:form>
 
