--- a/src/main/webapp/paginas/Transaccion.xhtml
+++ b/src/main/webapp/paginas/Transaccion.xhtml
@@ -127,154 +127,135 @@
                 <h:panelGrid>
 
                     <h:panelGroup id="pnlClasificacion">
+                        <p:growl id="growlClasificacion" showDetail="true"/>
+                        <p:growl id="growl-stickyTablaClasificacion" for="sticky-key" showDetail="true"/>
+
                         <h:form id="frmClasificacion">
-                            <h:panelGrid columns="2">
-                                <h:outputLabel value="Tipo de Transacción:"/>
-                                <p:selectOneMenu
-                                        value="#{transaccionFrm.transaccionClasificacionFrm.registro.tipoTransaccion}"
-                                        rendered="#{transaccionFrm.estado == 'MODIFICAR'}">
+                            <h:panelGrid>
+                                <h:panelGrid columns="2">
+                                    <h:outputLabel for="txtTransaccion" value="Tipo de Transacción:"/>
+                                    <p:selectOneMenu id="txtTransaccion"
+                                            value="#{transaccionClasificacionFrm.registro.tipoTransaccion}"
+                                            rendered="#{transaccionFrm.estado == 'MODIFICAR'}">
 
-                                    <f:selectItem itemLabel="Seleccione" itemValue="#{null}"/>
-                                    <f:selectItem itemLabel="COMPRA" itemValue="COMPRA"/>
-                                    <f:selectItem itemLabel="VENTA" itemValue="VENTA"/>
-                                </p:selectOneMenu>
+                                        <f:selectItem itemLabel="Seleccione" itemValue="#{null}"/>
+                                        <f:selectItem itemLabel="COMPRA" itemValue="COMPRA"/>
+                                        <f:selectItem itemLabel="VENTA" itemValue="VENTA"/>
+                                    </p:selectOneMenu>
 
-                                <p:outputLabel for="acCategoria" value="Categoria :"/>
-                                <h:panelGrid>
-                                    <h:panelGrid columns="2">
-                                        <p:outputLabel value="Seleccione la categoria: " for="acCategoria"/>
-                                        <p:autoComplete id="acCategoria"
-                                                        value="#{transaccionClasificacionFrm.categoriaSeleccionada}"
-                                                        completeMethod="#{transaccionClasificacionFrm.completarCategoria}"
-                                                        var="categoria"
-                                                        converter="categoriaConversor"
-                                                        itemLabel="#{categoria.nombre}"
-                                                        itemValue="#{categoria}"
-                                                        forceSelection="true"
-                                                        dropdown="true"
-                                                        size="40"
-                                                        placeholder="Ingrese el nombre de la caracteristica"
-                                                        emptyMessage="No se encontraron caracteristica con ese nombre"
-
-                                        />
+                                    <p:outputLabel for="acCategoria" value="Categoria :"/>
+                                    <h:panelGrid>
+                                        <h:panelGrid columns="2">
+                                            <p:outputLabel value="Seleccione la categoria: " for="acCategoria"/>
+                                            <p:autoComplete id="acCategoria"
+                                                            value="#{transaccionClasificacionFrm.categoriaSeleccionada}"
+                                                            completeMethod="#{transaccionClasificacionFrm.completarCategoria}"
+                                                            var="categoria"
+                                                            converter="categoriaConversor"
+                                                            itemLabel="#{categoria.nombre}"
+                                                            itemValue="#{categoria}"
+                                                            forceSelection="true"
+                                                            required="true"
+                                                            dropdown="true"
+                                                            size="40"
+                                                            placeholder="Ingrese el nombre de la caracteristica"
+                                                            emptyMessage="No se encontraron caracteristica con ese nombre"
+                                            />
+                                        </h:panelGrid>
                                     </h:panelGrid>
+
+
+                                    <h:panelGrid>
+                                        <h:outputLabel for="txtCategoria" value="Descripción de Categoría:"/>
+                                        <h:outputText id="txtCategoria"
+                                                value="#{transaccionClasificacionFrm.registro.categoria.descripcion}"
+                                                rendered="#{not empty transaccionClasificacionFrm.registro and not empty transaccionClasificacionFrm.registro.categoria}"/>
+                                        <h:outputText value="(no seleccionada)"
+                                                      rendered="#{empty transaccionClasificacionFrm.registro or empty transaccionClasificacionFrm.registro.categoria}"/>
+                                    </h:panelGrid>
+
                                 </h:panelGrid>
 
 
+                                <p:outputLabel for="chkDireccionAsientosContables" value="Direccion de la cuenta:"/>
                                 <h:panelGrid>
-                                    <h:outputLabel value="Descripción de Categoría:"/>
-                                    <h:outputText value="#{transaccionFrm.transaccionClasificacionFrm.registro.categoria.descripcion}"
-                                                  rendered="#{not empty transaccionFrm.transaccionClasificacionFrm.registro and not empty transaccionFrm.transaccionClasificacionFrm.registro.categoria}" />
-                                    <h:outputText value="(no seleccionada)"
-                                                  rendered="#{empty transaccionFrm.transaccionClasificacionFrm.registro or empty transaccionFrm.transaccionClasificacionFrm.registro.categoria}" />
+                                    <p:selectOneRadio id="chkDireccionAsientosContables"
+                                                      value="#{transaccionClasificacionFrm.cuentaEsDebe}">
+                                        <f:selectItem itemLabel="Debe" itemValue="#{true}"/>
+                                        <f:selectItem itemLabel="Haber" itemValue="#{false}"/>
+                                        <p:ajax event="change" process="@this"
+                                                update="cuentaPanel infoCuentaDebe infoCuentaHaber"/>
+                                    </p:selectOneRadio>
                                 </h:panelGrid>
 
-                            </h:panelGrid>
-
-
-                            <p:column headerText="Naturaleza de la cuenta"/>
-                            <h:panelGrid columns="2">
-                                <!-- Partida Contable - Dos Columnas -->
-                                <div style="display: flex; gap: 20px; margin-bottom: 20px;">
-
-                                <!-- COLUMNA DEBE -->
-                                <div style="flex: 1; border: 2px solid #d32f2f; border-radius: 8px; padding: 15px; background-color: #fff5f5;">
-                                    <h3 style="color: #d32f2f; text-align: center; margin-bottom: 15px;">DEBE</h3>
-
-                                    <p:outputLabel for="autoCompleteDebe" value="Buscar Cuenta Débito:"/>
+                                <h:panelGroup id="cuentaPanel">
+                                    <p:outputLabel for="autoCompleteDebe" value="Buscar Cuenta Débito:"
+                                                   rendered="#{transaccionClasificacionFrm.cuentaEsDebe}"/>
                                     <p:autoComplete id="autoCompleteDebe"
                                                     value="#{transaccionClasificacionFrm.registro.cuentaContableDebe}"
                                                     completeMethod="#{transaccionClasificacionFrm.completarCuenta}"
-                                                    var="cuenta"
-                                                    itemLabel="#{cuenta.codigo} - #{cuenta.nombre}"
-                                                    itemValue="#{cuenta}"
+                                                    var="cuentaD"
+                                                    converter="cuentaConversor"
+                                                    itemLabel="#{cuentaD.nombre}"
+                                                    itemValue="#{cuentaD}"
                                                     forceSelection="true"
                                                     dropdown="true"
-                                                    style="width: 100%;"
-                                                    required="true">
-                                        <p:ajax event="itemSelect"
-                                                listener="#{transaccionClasificacionFrm.onCuentaDebeSelect}"
-                                                update="infoCuentaDebe infoCuentaHaber validacionPartida"/>
-                                    </p:autoComplete>
+                                                    required="true"
+                                                    size="40"
+                                                    placeholder="Ingrese el nombre de la cuenta"
+                                                    emptyMessage="No se encontraron cuentas con ese nombre"
+                                                    rendered="#{transaccionClasificacionFrm.cuentaEsDebe}"/>
 
                                     <!-- Información de la Cuenta Débito Seleccionada -->
                                     <h:panelGroup id="infoCuentaDebe">
-                                        <p:outputPanel rendered="#{transaccionClasificacionFrm.registro.cuentaContableDebe != null}">
-                                            <div style="margin-top: 10px; padding: 10px; background: white; border-radius: 5px; border: 1px solid #ddd;">
-                                                <p style="font-weight: bold; margin: 0 0 5px 0; color: #d32f2f;">Cuenta Débito Seleccionada:</p>
-                                                <div style="display: grid; grid-template-columns: auto 1fr; gap: 8px; align-items: center;">
-                                                    <strong>Nombre:</strong>
-                                                    <span style="color: #007ad9;">#{transaccionClasificacionFrm.registro.cuentaContableDebe.nombre}</span>
-
-                                                    <strong>Código:</strong>
-                                                    <code style="background: #f5f5f5; padding: 2px 6px; border-radius: 3px;">
-                                                        #{transaccionClasificacionFrm.registro.cuentaContableDebe.codigo}
-                                                    </code>
-
-                                                    <strong>Descripción:</strong>
-                                                    <span>#{transaccionClasificacionFrm.registro.cuentaContableDebe.descripcion}</span>
-                                                </div>
-                                            </div>
+                                        <p:outputPanel
+                                                rendered="#{transaccionClasificacionFrm.cuentaEsDebe and transaccionClasificacionFrm.registro.cuentaContableDebe != null}">
+                                            <!-- contenido info debe -->
                                         </p:outputPanel>
                                     </h:panelGroup>
-                                </div>
 
-                                <!-- COLUMNA HABER -->
-                                <div style="flex: 1; border: 2px solid #388e3c; border-radius: 8px; padding: 15px; background-color: #f5fff5;">
-                                    <h3 style="color: #388e3c; text-align: center; margin-bottom: 15px;">HABER</h3>
-
-                                    <p:outputLabel for="autoCompleteHaber" value="Buscar Cuenta Haber:"/>
+                                    <!-- COLUMNA HABER -->
+                                    <p:outputLabel for="autoCompleteHaber" value="Buscar Cuenta Haber:"
+                                                   rendered="#{not transaccionClasificacionFrm.cuentaEsDebe}"/>
                                     <p:autoComplete id="autoCompleteHaber"
                                                     value="#{transaccionClasificacionFrm.registro.cuentaContableHaber}"
                                                     completeMethod="#{transaccionClasificacionFrm.completarCuenta}"
                                                     var="cuenta"
-                                                    itemLabel="#{cuenta.codigo} - #{cuenta.nombre}"
+                                                    converter="cuentaConversor"
+                                                    itemLabel="#{cuenta.nombre}"
                                                     itemValue="#{cuenta}"
                                                     forceSelection="true"
                                                     dropdown="true"
-                                                    style="width: 100%;"
-                                                    required="true">
-                                        <p:ajax event="itemSelect"
-                                                listener="#{transaccionClasificacionFrm.onCuentaHaberSelect}"
-                                                update="infoCuentaDebe infoCuentaHaber validacionPartida"/>
-                                    </p:autoComplete>
+                                                    required="true"
+                                                    size="40"
+                                                    placeholder="Ingrese el nombre de la cuenta"
+                                                    emptyMessage="No se encontraron cuentas con ese nombre"
+                                                    rendered="#{not transaccionClasificacionFrm.cuentaEsDebe}"/>
 
                                     <!-- Información de la Cuenta Haber Seleccionada -->
                                     <h:panelGroup id="infoCuentaHaber">
-                                        <p:outputPanel rendered="#{transaccionClasificacionFrm.registro.cuentaContableHaber != null}">
-                                            <div style="margin-top: 10px; padding: 10px; background: white; border-radius: 5px; border: 1px solid #ddd;">
-                                                <p style="font-weight: bold; margin: 0 0 5px 0; color: #388e3c;">Cuenta Haber Seleccionada:</p>
-                                                <div style="display: grid; grid-template-columns: auto 1fr; gap: 8px; align-items: center;">
-                                                    <strong>Nombre:</strong>
-                                                    <span style="color: #007ad9;">#{transaccionClasificacionFrm.registro.cuentaContableHaber.nombre}</span>
-
-                                                    <strong>Código:</strong>
-                                                    <code style="background: #f5f5f5; padding: 2px 6px; border-radius: 3px;">
-                                                        #{transaccionClasificacionFrm.registro.cuentaContableHaber.codigo}
-                                                    </code>
-
-                                                    <strong>Descripción:</strong>
-                                                    <span>#{transaccionClasificacionFrm.registro.cuentaContableHaber.descripcion}</span>
-                                                </div>
-                                            </div>
+                                        <p:outputPanel
+                                                rendered="#{not transaccionClasificacionFrm.cuentaEsDebe and transaccionClasificacionFrm.registro.cuentaContableHaber != null}">
+                                            <!-- contenido info haber -->
                                         </p:outputPanel>
                                     </h:panelGroup>
-                                </div>
-                                </div>
+                                </h:panelGroup>
+
+                                <h:panelGrid>
+                                    <p:commandButton id="btnGuardarTodo"
+                                                     value="Guardar todo"
+                                                     icon="pi pi-save"
+                                                     action="#{transaccionFrm.guardarTodoDelTab}"
+                                                     update=":tabTransaccion:pnlClasificacion "
+                                                     process="@form"
+                                                     ajax="true"
+                                    />
+                                </h:panelGrid>
 
                             </h:panelGrid>
-
-                            <p:commandButton id="guardarTodasSelecciones"
-                                             value="Guardar selecciones"
-                                             icon="pi pi-save"
-                                             action="#{transaccionFrm.guardarClasificacionesSeleccionadas}"
-                                             process="@this listaTabla seleccionForm"
-                                             update="@form messages tablaTransacciones"
-                                             onstart="PF('statusDialog').show()"
-                                             oncomplete="PF('statusDialog').hide()" />
+                        
                         </h:form>
                     </h:panelGroup>
-
                 </h:panelGrid>
 
             </p:tab>
